--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v2.1.1
-
-          
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: BungeeGuard-Spigot
+        path: bungeeguard-spigot/target/bungeeguard-spigot-1.3-SNAPSHOT.jar
