--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v1
       with:
-        name: BungeeGuard-Spigot
-        path: bungeeguard-spigot/target/bungeeguard-spigot-1.3-SNAPSHOT.jar
+        name: BungeeGuard
+        path: bungeeguard-universal/1.3-SNAPSHOT/bungeeguard-universal-1.3-SNAPSHOT.jar
