--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: BungeeGuard
-        path: bungeeguard-universal/1.3-SNAPSHOT/bungeeguard-universal-1.3-SNAPSHOT.jar
+        path: bungeeguard-universal/target/BungeeGuard.jar
